# kositsyna_e_n

./: CMakeLists.txt  queue_p.cpp  queue_p.h
prj.lab/: CMakeLists.txt
prj.lab/999B/: 999B.cpp  CMakeCache.txt
prj.lab/Qu/: CMakeLists.txt  qu.cpp
prj.lab/bitset/: bitset.cpp  bitset.h  bitset_test.cpp
prj.lab/bitsetI/: CMakeLists.txt  bitseti.cpp  bitseti.h
prj.lab/bitsetT/: bitsetT.h  bitsetT_test.cpp
prj.lab/c_queue_p/: CMakeLists.txt  c_queue_p.c
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.h  complex_test.cpp
prj.lab/main/: CMakeLists.txt  main.cpp  main.h  main_test.cpp
prj.lab/queue_p/: CMakeLists.txt  queue_p.cpp  queue_p.h
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.h  rational_test.cpp
